trying to fix spacing

--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -426,9 +426,9 @@ footer > p {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		margin-top: 2rem;
+		margin-top: 1.5rem;
 		margin: auto;
-		margin-bottom: 2rem;
+		margin-bottom: 1.5rem;
 	}
 
 	.h1-container {
